fix: join chat qr code alignment

--- a/client/src/components/ChatPage/ChatPage.css
+++ b/client/src/components/ChatPage/ChatPage.css
@@ -7,9 +7,7 @@ body,
 
 .chat-container.glass-panel {
     /* Use the most appropriate viewport unit for mobile browsers. */
-    height: 100vh;   /* Fallback for older browsers */
-    height: 100svh;  /* Small viewport height (better on some mobile browsers) */
-    height: 100dvh;  /* Dynamic viewport height (handles chrome/toolbars) */
+    height: 90vh;   /* Fallback for older browsers */
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -21,6 +19,9 @@ body,
 
 @media(max-width: 468px) {
     .chat-container.glass-panel {
+        height: 100vh;   /* Fallback for older browsers */
+        height: 100svh;  /* Small viewport height (better on some mobile browsers) */
+        height: 100dvh;  /* Dynamic viewport height (handles chrome/toolbars) */
         padding: 15px 5px 5px 0;
         border-radius: 0;
     }
